--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@
     flex-direction: column;;
     margin: 0;
     padding: 0;
-    gap: 1rem;
+    gap: .5rem;
     border-radius:15px 15px 15px 15px   ;
 }
 
@@ -49,7 +49,7 @@
 .divider{
     width: 90%;
     margin: auto;
-    padding-bottom: 1.5rem;
+    /* padding-bottom: 1.5rem; */
 }
 
 .dice-container{
